--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Animated Login Form - CSS</title>
+  <title>CodePen - Animeted login form by Najmin</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<!--ring div starts here-->
+<h2 class="hue">Animeted login form by Najmin</h2>
 <div class="ring">
   <i style="--clr:#00ff0a;"></i>
   <i style="--clr:#ff0057;"></i>
