--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
 
 </head>
 <body>
-<h2 class="hue">Animeted login form by Najmin</h2>
 <div class="ring">
   <i style="--clr:#00ff0a;"></i>
   <i style="--clr:#ff0057;"></i>
   <i style="--clr:#fffd44;"></i>
   <div class="login">
-    <h2>Login</h2>
+    <h2>Animeted Login form by Nahmin</h2>
     <div class="inputBx">
       <input type="text" placeholder="Username">
     </div>
