--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <i style="--clr:#ff0057;"></i>
   <i style="--clr:#fffd44;"></i>
   <div class="login">
-    <h2>Animeted Login form by Nahmin</h2>
+    <center><h2>Animeted Login form by Nahmin</h>></center>
     <div class="inputBx">
       <input type="text" placeholder="Username">
     </div>
