--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <i style="--clr:#ff0057;"></i>
   <i style="--clr:#fffd44;"></i>
   <div class="login">
-    <center><h2>Animeted Login Form By Nahmin</h></center>
+    <center><h2>Animeted Login Form By Najmin</h></center>
     <div class="inputBx">
       <input type="text" placeholder="Username">
     </div>
